# RNSVG

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  Dockerfile.build  Dockerfile.hardened  FAQ.md  LEGAL.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  Taskfile.yml  cosign.pub  cx_setup.py  docker-compose.dev.yml  docker-compose.yml  donate.md  eslint.config.mjs  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh  vite.config.js  vitest.config.js  vitest.electron.config.js
.github/: dependabot.yml
android/: .gitignore  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
docs/: meshchatx.md  meshchatx_linux_sandbox.md  meshchatx_on_quest_with_sidequest.md  meshchatx_on_raspberry_pi.md
electron/: backendCrashReport.js  backendIntegrity.js  backendProcess.js  backendProcessWin.js  crash.html  loading.html  loadingStatusNotice.js  main.js  mainHelpers.js  preload.js  safeExternalUrl.js  shellPathGuard.js
lang/: README.de.md  README.it.md  README.ja.md  README.ru.md  README.zh.md
meshchatx/: __init__.py  android_codec2.py  android_push_bridge.py  meshchat.py  repository_http_standalone.py
patches/: ol-mapbox-style@13.4.1.patch  ol@10.9.0.patch
rnsvg/: __init__.py  __main__.py  config.py  database.py  discovery.py  identity_manager.py  interfaces_manager.py  messaging.py  responses.py  rns_transport.py  router.py  server.py  share.py  stub_router.py  telephony.py  version.py  (+1 more)
(+873 files in other folders)
